--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,17 @@
 body {
     padding-top: 5rem;
 }
+
+.form-group{
+    width:400px;
+    font-weight:bold;
+}
+
+form textarea#message{
+    width:500px;
+    height:90px;
+}
+p{
+    
+    color:Grey;
+}
